# nustar_pysolar

./: .#.gitignore  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
convert_to_solar/: Convert_To_Solar_Example.ipynb  Quick_Map-Copy1.ipynb  Quick_Map.ipynb  nustar_convert_to_solar.py  nustar_make_sunpy_map.py  nustar_make_sunpy_map_v2.py  observation_log.txt  run_all_maps.sh  run_solar_pipe.sh
docs/: api.rst  conf.py  convert.rst  filter.rst  index.rst  map.rst  planning.rst  requirements.txt
notebooks/: 20180528_test.ipynb  Convert_Example.ipynb  Ephemeris_Test.ipynb  Jupiter_Planning.ipynb  Jupiter_Planning_withparallax.ipynb  Map_Example.ipynb  Mosaic 20180928.ipynb  Mosaic Example.ipynb  NuSTAR.tle  Observation_Report.ipynb  Planning_20170911.ipynb  Planning_Example.ipynb  Pointing_test.ipynb  Quick_Map-Copy1.ipynb  Quick_Map.ipynb  Sunpy_vs_Skyfield.ipynb  jupiter_20170517to20170520_pointing.txt
notebooks/20180928/: Mosaic 20180928.ipynb  mosaic1.txt  mosaic2.txt
notebooks/20190112/: Mosaic 20190112.ipynb  orbit3_mosaic.txt  orbit4_mosaic.txt  testbox0.reg  testbox1.reg  testbox10.reg  testbox11.reg  testbox12.reg  testbox13.reg  testbox14.reg  testbox15.reg  testbox16.reg  testbox17.reg  testbox18.reg  testbox19.reg  testbox2.reg  testbox20.reg  testbox21.reg  testbox22.reg  testbox23.reg  testbox24.reg  testbox3.reg  testbox4.reg  testbox5.reg  testbox6.reg  testbox7.reg  testbox8.reg  testbox9.reg
notebooks/20190425/: Mosaic 20190425.ipynb  orbit1_mosaic.txt  orbit2_mosaic.txt  orbit3_mosaic.txt  orbit4_mosaic.txt  testbox0.reg  testbox1.reg  testbox10.reg  testbox11.reg  testbox12.reg  testbox13.reg  testbox14.reg  testbox15.reg  testbox16.reg  testbox17.reg  testbox18.reg  testbox19.reg  testbox2.reg  testbox20.reg  testbox21.reg  testbox22.reg  testbox23.reg  testbox24.reg  testbox3.reg  (+6 more)
nustar_pysolar/: __init__.py  conftest.py  convert.py  filter.py  io.py  map.py  nustar_pysolar.py  planning.py  tracking.py  utils.py
nustar_scripts/: README.md  run_nuexpomap.sh  run_nupipeline_solar.sh
setup_pointing/: NuSTAR Sun Pointing Example.ipynb  README.md  Untitled.ipynb
(+83 files in other folders)
